Reverted back to using session
